updated yml headers
All headers updated to include editor: source and format: html.  The editor: source will prevent RStudio from mucking things up on accident.  format: html doesn't seem like it will hurt anything?

--- a/inst/lessons/github_collaboration.qmd
+++ b/inst/lessons/github_collaboration.qmd
@@ -1,7 +1,10 @@
-## Learning Objectives {.unnumbered}
 ---
 title: Collaborating with Git and GitHub
+format: html
+editor: source
 ---
+
+## Learning Objectives {.unnumbered}
 
 - Apply the principles, features, and collaboration tools of Git and GitHub to effectively collaborate with colleagues on code
 - Analyze and evaluate common causes of conflicts that arise when collaborating on repositories 
