--- a/inst/lessons/lecture_tidy_data.qmd
+++ b/inst/lessons/lecture_tidy_data.qmd
@@ -1,8 +1,7 @@
 ---
 title: Tidy Data
-editor: 
-  markdown: 
-    wrap: sentence
+format: html
+editor: source
 ---
 
 ## Learning Objectives {.unnumbered}
