added update tags to headers for version testing

--- a/inst/lessons/activity_reproducibility_lego.qmd
+++ b/inst/lessons/activity_reproducibility_lego.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Reproducibility: a Lego Activity"
+title: "Reproducibility: a Lego Activity UPDATED 11/7"
 format: html
 editor: source
 ---
