--- a/inst/lessons/r_functions.qmd
+++ b/inst/lessons/r_functions.qmd
@@ -1,7 +1,5 @@
 ---
-title: Writing Functions UPDATED 11/7
-format: html
-editor: source
+title: Writing Functions
 ---
 
 ## Learning Objectives {.unnumbered}
