--- a/inst/lessons/r_quarto_literate_analysis.qmd
+++ b/inst/lessons/r_quarto_literate_analysis.qmd
@@ -1,7 +1,5 @@
 ---
-title: Literate Analysis with Quarto UPDATED 11/7
-format: html
-editor: source
+title: Literate Analysis with Quarto
 ---
 
 ## Learning Objectives {.unnumbered}
