feat: reformatting learning objectives as callouts

--- a/inst/lessons/github_collaboration.qmd
+++ b/inst/lessons/github_collaboration.qmd
@@ -2,12 +2,14 @@
 title: Collaborating with Git and GitHub
 ---
 
-## Learning Objectives {.unnumbered}
+:::{.callout-tip}
+## Learning Objectives
 
 - Apply the principles, features, and collaboration tools of Git and GitHub to effectively collaborate with colleagues on code
 - Analyze and evaluate common causes of conflicts that arise when collaborating on repositories 
 - Demonstrate the ability to resolve conflicts using Git conflict resolution techniques
 - Apply workflows and best practices that minimize conflicts on collaborative repositories
+:::
 
 ## Introduction to Git and GitHub Tools for Collaboration
 
