--- a/inst/lessons/github_introduction.qmd
+++ b/inst/lessons/github_introduction.qmd
@@ -5,11 +5,13 @@ editor: source
 ---
 
 
-## Learning Objectives {.unnumbered}
+:::{.callout-tip}
+## Learning Objectives
 
 -   Apply the principles of Git to track and manage changes of a project
 -   Utilize the Git workflow including pulling changes, staging modified files, committing changes, pulling again to incorporate remote changes, and pushing changes to a remote repository
 -   Create and configure Git repositories using different workflows
+:::
 
 ## Introduction to Version Control
 
