--- a/inst/course_files/index_template.qmd
+++ b/inst/course_files/index_template.qmd
@@ -1,14 +1,14 @@
-<!-- # Preface {.unnumbered} -->
+---
+title: About the course
+format:
+  html:
+    toc: false
+---
 
 ::: column-margin
 
-![](cover.png){width="80%" fig-align="center"}
-
-<!-- ![](images/delta/delta-logo.png){width="80%" fig-align="center"} -->
-
 :::
 
-## About the course {.unnumbered}
 
 COURSE_DESCRIPTION
 <!-- As part of a collaboration between NCEAS and the Delta Science Program, this course has been adapted from [NCEAS coreR course](https://www.nceas.ucsb.edu/learning-hub/core-r), an in-person immersion in R programming for environmental data science. Researchers will gain experience with essential data science tools and best practices to increase their capacity as collaborators, reproducible coders, and open scientists. -->
@@ -23,17 +23,19 @@ NCEAS has over 25 years of success with this model among working groups and envi
 
 <!-- *June 10 - 13, 2024* -->
 
+:::{.callout-tip}
 ### Learning Objectives
 -   Effectively manage data using `tidy` data practices
 -   Implement reproducible scientific workflows throughout all aspects of a project
 -   Establish best practices and utilize tools like Git & GitHub to optimize your collaboration
 -   Better communicate scientific analyses and results using Markdown, GitHub webpages, and R packages like `ggplot2` and `Shiny`
 - Increase your familiarity and confidence with data science tools
+:::
 
 ### Week's Schedule
 
 :::{.column-body-outset}
-![](images/schedule.png)
+<!-- ![](images/schedule.png) -->
 :::
 
 
